changed pickle slide and added kraut

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<p>We'll add info on how to make pickles here</p>
 					</section>
 					<section>
-						<h2>Basement Level 2</h2>
+						<h2>Something else about pickles</h2>
 						<p>That's it, time to go back up.</p>
 						<br>
 						<a href="#/2">
@@ -88,7 +88,7 @@
 				</section>
 
 				<section>
-					<h2>Slides</h2>
+					<h2>Sauerkraut</h2>
 					<p>
 						Not a coder? Not a problem. There's a fully-featured visual editor for authoring these, try it out at <a href="https://slides.com" target="_blank">https://slides.com</a>.
 					</p>
