added some words on kraut slide

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<section>
 					<h2>Sauerkraut</h2>
 					<p>
-						Not a coder? Not a problem. There's a fully-featured visual editor for authoring these, try it out at <a href="https://slides.com" target="_blank">https://slides.com</a>.
+						Sauerkraut is also yummy.
 					</p>
 				</section>
 
